# ai-exam-assistant-backend

./: .gitignore  Dockerfile  alembic.ini  backup_neon.sql  databas.py  main.py  pyproject.toml  requirements.txt
DB/: db_models.py  deps.py  seed_plan.py
alembic/: env.py
alembic/versions/: 01a5eda8c7ed_add_unique_active_subscription_index.py  02b4ac79049c_add_title_column_in_session.py  0efdd2c5df35_add_voice_explanations_table.py  114b2e3cd4c8_added_sub_type_column_in_usersubs.py  17b301ebe437_fixed_decaprecated_in_usersubs.py  1873755fa403_add_session_message_and_long_term_.py  257259e03b54_silly_mistakes_quizzez.py  29d41c5ff7e4_changes_in_usersubscription.py  3316b7fc5b6f_updated_session_id_column_in_notes_and_.py  578ea87716b5_add_table_studysessions.py  57d5c8ea4b3d_add_table_quizquestion.py  57e8a166bd4e_added_last_credit_update.py  5a48ab077155_add_is_verified_column.py  62cdf33399ac_silly_mistakes_typo_studysession.py  633f2193b538_silly_mistakes_backreff.py  688292ed2958_fix_voice_explanation_relationship.py  735b0afcf791_updated_table_quizquestion.py  89fd1b1cf889_made_change_in_the_attempt_number_column.py  8bdd73aa030e_added_billing_column_in_plan.py  9799d912f05a_updated_column_in_quizquestion.py  98edefad165a_add_plans_and_subscriptions.py  9f0949e69363_changes_sharedid_to_text.py  9f6e617d19b9_deleting_unabled_fixes.py  a939e579d79f_made_correction_in_fc.py  aaaa41bfabc3_add_tables_notes_and_flashcards.py  b37519da39dd_fixed_typo.py  b57e8b120283_add_unique_constraint_to_quiz_attempts.py  b6cb49899804_added_shared_settings.py  b9e19920a763_changes_sharedid_dtype.py  c35256332d5e_add_on_delete_cascade_to_notes_session_.py  c3d835016770_changes_in_usersubscription_table_order_.py  c9ee42bbee18_add_credits_to_user_and_monthly_credits_.py  caf581b00471_did_not_save.py  d261e0f3dafb_made_changes_for_deleting_fc_and_quizzes.py  d51651d3016b_add_attempt_number_to_quiz_attempts.py  da2019cc1705_.py  ddba197e0197_updated_col_of_userlimits_fixed_errors.py  deaee96ab7b1_fix_verification_token_typo.py  e9f2ade201cf_silly_mistakes_attempts.py  f4a8de95e736_add_credits_to_user_and_monthly_credits.py  (+1 more)
api/: model.py  model1.py
api/routes/: chat.py  file_upload.py  payment.py  plan.py  study_tools.py  test.py  users.py  voice.py
app/: backfill_subscriptions.py  create_tables.py  databas.py  main.py
auth/: deps.py  limits.py  routes.py  schema.py  utils.py
memory/: chat_history.py  long_term.py  short_term.py
utils/: credit_refil.py  credits_manager.py  email_utils.py  embedding.py  exceptions.py  image_parser.py  model.py  model1.py  pdf_parser.py  prompt_format.py  rate_limiter.py  redis_handler.py  study_utils.py  summarizer.py  tokens.py  usage_tracker.py
