[project]
name = "ai-exam-assistance-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "setuptools",
    "accelerate",
    "acres",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "alembic",
    "annotated-types",
    "anyio",
    "async-timeout",
    "asyncpg",
    "attrs",
    "bcrypt",
    "blinker",
    "cachetools",
    "certifi",
    "cffi",
    "charset-normalizer",
    "ci-info",
    "click",
    "configobj",
    "configparser",
    "cryptography",
    "dataclasses-json",
    "decorator",
    "Deprecated",
    "distro",
    "dnspython",
    "ecdsa",
    "email_validator",
    "etelemetry",
    "eval_type_backport",
    "faiss-cpu",
    "fastapi",
    "fastapi-cli",
    "fastapi-limiter",
    "ffmpeg-python",
    "filelock",
    "Flask",
    "frozenlist",
    "fsspec",
    "future",
    "git-filter-repo",
    "google-ai-generativelanguage",
    "google-api-core",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-generativeai",
    "googleapis-common-protos",
    "greenlet",
    "grpcio",
    "grpcio-status",
    "h11",
    "httpcore",
    "httplib2",
    "httptools",
    "httpx",
    "httpx-sse",
    "huggingface-hub",
    "idna",
    "imageio",
    "imageio-ffmpeg",
    "inquirerpy",
    "itsdangerous",
    "Jinja2",
    "jiter",
    "joblib",
    "jsonpatch",
    "jsonpointer",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "langsmith",
    "limits",
    "looseversion",
    "lxml==5.4.0",
    "Mako",
    "markdown-it-py",
    "MarkupSafe",
    "marshmallow",
    "mdurl",
    "mistralai",
    "moviepy",
    "mpmath",
    "multidict",
    "mypy-extensions",
    "networkx",
    "nibabel",
    "nipype",
    "numpy",
    "openai",
    "orjson",
    "packaging",
    "pandas",
    "passlib",
    "pathlib",
    "pdf2image",
    "pdfminer.six",
    "pdfplumber",
    "pfzy",
    "pgvector",
    "pillow",
    "proglog",
    "prompt_toolkit",
    "propcache",
    "proto-plus",
    "protobuf",
    "prov",
    "psutil",
    "psycopg2",
    "psycopg2-binary",
    "puremagic",
    "pyasn1",
    "pyasn1_modules",
    "pycparser",
    "pydantic",
    "pydantic-extra-types",
    "pydantic-settings",
    "pydantic_core",
    "pydot",
    "Pygments",
    "PyJWT",
    "pyparsing",
    "pypdfium2",
    "pytesseract",
    "python-dateutil",
    "python-dotenv",
    "python-http-client",
    "python-jose",
    "python-multipart",
    "pytz",
    "pyxnat",
    "PyYAML",
    "razorpay",
    "rdflib",
    "redis",
    "regex",
    "requests",
    "requests-toolbelt",
    "rich",
    "rich-toolkit",
    "rsa",
    "safetensors",
    "scikit-learn",
    "scipy",
    "sendgrid",
    "sentence-transformers",
    "sentencepiece",
    "shellingham",
    "simplejson",
    "six",
    "slowapi",
    "sniffio",
    "SQLAlchemy",
    "starkbank-ecdsa",
    "starlette",
    "sympy",
    "tenacity",
    "threadpoolctl",
    "tokenizers",
    "torch",
    "tqdm",
    "traits",
    "transformers",
    "typer",
    "typing-inspect",
    "typing-inspection",
    "typing_extensions",
    "tzdata",
    "ujson",
    "uritemplate",
    "urllib3",
    "uvicorn",
    "watchfiles",
    "wcwidth",
    "websockets",
    "Werkzeug",
    "wrapt",
    "yarl",
    "zstandard"
]
