[project]
name = "ai-exam-assistance-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "SQLAlchemy",
    "psycopg2-binary",
    "pydantic",
    "python-dotenv",
    "requests",
    "httpx",
    "redis",
    "razorpay",
    "python-jose",
    "passlib",
    "alembic",
    "starlette",
    "python-multipart",
    "typing-extensions",
    "email_validator",
    "jinja2",
    "orjson",
    "uvloop",  # optional, speeds up async FastAPI
]

