[project]
name = "ai-exam-assistance-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic",
    "fastapi",
    "fastapi-limiter",
    "pydantic",
    "python-dotenv",
    "passlib",
    "requests",
    "redis",
    "slowapi",
    "pgvector",
    "sentence-transformers",
    "pdfplumber",
    "pytesseract",
    "pillow",
    "numpy",
    "razorpay",
    "python-jose",
    "openai",
    "google-generativeai",
    "SQLAlchemy",
    "starlette",
    "uvicorn"
]


